--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,16 +1,23 @@
 server {
     listen 80;
+    index index.html;
     client_max_body_size 10M;
+    server_tokens off;
 
-    location /api/docs/ {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/redoc.html;
+    location /api/ {
+    proxy_set_header Host $http_host;
+    proxy_pass http://backend:8000/api/;
     }
-    
-    location / {
-        root /usr/share/nginx/html;
-        index  index.html index.htm;
-        try_files $uri /index.html;
-      }
+    location /admin/ {
+        proxy_set_header Host $http_host;
+        proxy_pass http://backend:8000/admin/;
+    }
+    location /media/ {
+        alias /app/media/;
+    }
 
+    location / {
+        alias /static/;
+        try_files $uri $uri/ /index.html;
+    }
 }
