--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,16 +1,17 @@
 server {
     listen 80;
+    server_name foodgramz.hopto.org;
     index index.html;
     client_max_body_size 10M;
     server_tokens off;
 
     location /api/ {
     proxy_set_header Host $http_host;
-    proxy_pass http://backend:8000/api/;
+    proxy_pass http://backend:8080/api/;
     }
     location /admin/ {
         proxy_set_header Host $http_host;
-        proxy_pass http://backend:8000/admin/;
+        proxy_pass http://backend:8080/admin/;
     }
     location /media/ {
         alias /app/media/;
