--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install flake8==6.0.0 flake8-isort==6.0.0
-          pip install -r requirements.txt
+          pip install -r ./backend/requirements.txt
       - name: Test with flake8
         env:
           POSTGRES_USER: django_user
