--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,30 +67,30 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram:latest
 
-  frontend_tests:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up NodeJS
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
+  # frontend_tests:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Set up NodeJS
+  #       uses: actions/setup-node@v3
+  #       with:
+  #         node-version: 18
       
-      - name: Install dependencies
-        run: |
-          cd frontend/
-          npm i
+  #     - name: Install dependencies
+  #       run: |
+  #         cd frontend/
+  #         npm i
       
-      - name: Test frontend
-        run: |
-          cd frontend/
-          npm run test
+  #     - name: Test frontend
+  #       run: |
+  #         cd frontend/
+  #         npm run test
 
   build_frontend_and_push_to_docker_hub:
     name: Push frontend Docker image to DockerHub
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
-    needs: frontend_tests
+    # needs: frontend_tests
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
