--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
           cd backend/
           python manage.py test
 
-  build_and_push_to_docker_hub:
+  build_backend_and_push_to_docker_hub:
     name: Push docker image to dockerhub
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
@@ -65,26 +65,7 @@ jobs:
         with:
           context: ./backend/
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram:latest
-
-  # frontend_tests:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Set up NodeJS
-  #       uses: actions/setup-node@v3
-  #       with:
-  #         node-version: 18
-      
-  #     - name: Install dependencies
-  #       run: |
-  #         cd frontend/
-  #         npm i
-      
-  #     - name: Test frontend
-  #       run: |
-  #         cd frontend/
-  #         npm run test
+          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
 
   build_frontend_and_push_to_docker_hub:
     name: Push frontend Docker image to DockerHub
@@ -133,7 +114,7 @@ jobs:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     needs: 
-      - build_and_push_to_docker_hub
+      - build_backend_and_push_to_docker_hub
       - build_frontend_and_push_to_docker_hub
       - build_gateway_and_push_to_docker_hub
     steps:
